css/styles.css
/* ? ==================== GENERAL ==================== */

/* Import "Poppins" from Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");

/* Import "Kanit" from Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');

/* Import "Dawning of a New Day" from Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&display=swap");

/* Import "Unbounded" from Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Unbounded&display=swap");

* {
  margin: 0;
  padding: 0;

  scroll-behavior: smooth;
}

body {
  /* fonts */
  font-family: "Poppins", sans-serif;
  color: #e5e5dc;
  /* background */
  background-color: #0e1018;
  background: linear-gradient(145deg, #0e101860, #0e1018 70%),
    url("../images/bckgrd.webp");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;

  overflow: overlay;
  /* It is needed to transparent scrollbar */
}

/* Links */
a {
  text-decoration: none;
  color: inherit;
}

hr {  
  opacity: 50%;
}

/* ? ==================== NAVBAR ==================== */
.navbar {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
  /* height: 130px; */
  transition: ease-in-out 0.4s;

  position: fixed;
  width: 100%;
  z-index: 99;

  /* background-color: lightcoral; */

  /* effects */
  box-shadow: 5px 5px 15px #00000040;
  backdrop-filter: blur(3px);

  margin-bottom: 80px;
}

.logo {
  margin-right: 50px;
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 2.5rem;
  font-family: "Kanit", sans-serif;

  transition: ease-in-out 0.2s;
}

.logo:hover {
  filter: drop-shadow(0 0 5px #000000);
  transform: scale(1.01);
}

.logo img {
  width: 100px;
  margin: 10px;
}

.logo h1 {
  font-size: 2.2rem;
}

.list {
  list-style: none;
  display: flex;
  gap: 25px;

  /* background-color: lightblue; */
}

.list li {
  font-size: 1.3rem;
  transition: ease-in-out 0.2s;
  display: inline-block;
  position: relative;
}

.list li::before {
  content: '';
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 2px;
  border-radius: 4px;
  scale: 0 1;
  transform-origin: right;
  transition: scale .25s;
}

.list li:hover::before {
  scale: 1;
  transform-origin: left;
  background-color: #e5e5dc;
}

.list li:hover {
  text-shadow: 0 0 15px #000000;
  transform: scale(1.05);
}

#toggler,
.navbar label {
  display: none;
  margin: 10px;
}

label {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 20px;
  height: 20px;
}

.line {
  height: 3px;
  width: 30px;
  transition: ease-in-out 0.2s;
  background-color: #e5e5dc;
  border-radius: 40px;

  box-shadow: 0 0 2px black;
}

/* Scrollbar width */
::-webkit-scrollbar {
  width: 10px;
}

/* Scrollbar  Track */
::-webkit-scrollbar-track {
  background: transparent;
  margin: 20px auto;
}

/* Scrollbar Handle */
::-webkit-scrollbar-thumb {
  background: #3a4263;
  border-radius: 10px;
}

/* Scrollbar Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #3f4974;
}

/* ? ==================== CONTENT ==================== */
main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

h2 {
  font-size: 2rem;
}

/* ? ==================== ABOUT ME ==================== */
.about-me {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: calc(100vh - 170px);
  /* background-color: red; */
}

.about-me p {
  font-size: 2rem;
  line-height: 0rem;
}

.about-me p:nth-child(1) {
  text-align: right;
  margin-right: 30px;
}

.about-me p:nth-child(3) {
  margin-left: 30px;
  text-align: left;
  line-height: 0.7rem;
}

.about-me h1 {
  display: flex;
  justify-content: center;
  /* background-color: red; */
  color: #758adf;
  font-size: 7rem;
  line-height: 8rem;
  letter-spacing: 0.1rem;

  font-family: "Kanit", sans-serif;
}

/* Scroll div */
.arrows-down {
  width: 40px;
  height: 80px;
  border-radius: 40px;
  margin: 50px;

  border: 1px solid #e5e5dc50;
  position: relative;

  transform: scale(0.7) translateY(-4px);
  cursor: pointer;
  box-shadow: #000000 2px 2px 15px;
  transition: ease-in-out 0.1s;

  animation: BounceArrow ease-in-out 1s infinite;
}

@keyframes BounceArrow {
  50% {
    transform: translateY(5px) scale(0.7);
  }
}

/* Scroll div on hover */
.arrows-down:hover {
  transform: scale(0.7) translateY(0);
  box-shadow: #000000 2px 2px 10px;
}

.arrows-down::before,
.arrows-down::after {
  content: "";
  position: absolute;
  border: 2px solid #e5e5dc;
  width: 10px;
  top: 0;
  left: 50%;
  height: 10px;
  transform: translate(-50%, 50%) rotate(45deg);

  animation: ArrowAnimationDown ease-in-out infinite 1s;

  border-top: transparent;
  border-left: transparent;
}

.arrows-down::after {
  animation-delay: 0.3s;
}

@keyframes ArrowAnimationDown {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  60% {
    opacity: 1;
  }

  100% {
    opacity: 0;
    top: 65%;
  }
}

/* ? ==================== PROJECTS ==================== */
/* projects section scroll*/
#projects {
  scroll-margin-top: 190px;
}

/* Projects html tags in screen */
.projects::before,
.projects::after {
  user-select: none;
  font-family: "Dawning of a New Day", cursive;
  font-style: italic;
  color: #e5e5dc;
  opacity: 50%;
  font-size: 2rem;
  margin-left: -5%;
}

.projects::before {
  content: "<section>";
}

.projects::after {
  content: "</section>";
}

.project {
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(12, 1fr);
  align-items: center;

  width: 1000px;
  margin: 60px 0 60px 0;

  line-height: 1rem;

  transition: ease-in-out 0.2s;
}

/* Project image */
.project img {
  width: 100%;
  border-radius: 10px;
  box-shadow: 5px 5px 15px #00000060;

  filter: saturate(0.5);
  transition: ease-in-out 0.2s;
}
/* ... */

